--- a/style/ahmet.css
+++ b/style/ahmet.css
@@ -12,7 +12,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 10px;
-    padding: 70px;
+    padding: 120px 70px 70px 70px;
 }
 
 #ahmet-container img {
